infra/master/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: master-pod
  labels:
    os: "fedora"
    os_version: "33"
    arch: "x86_64"
    app: "buildbot"
    tier: "master"
    # Add your own key-value pairs
spec:
  containers:
    - name: master-container
      image: "${BUILDBOT_MASTER_IMAGE}"
      resources:
        limits:
          memory: "3Gi" # e.g. 64 Gigabytes = 64 Gi
          cpu: "10000m" # e.g. 32 cores = 32000m
      volumeMounts:
        - name: master_secret_volume
          mountPath: /secret-volume
          readOnly: true
      ports:
        - containerPort: 8010
          name: www
        - containerPort: 9989
          name: workers
        - containerPort: 8031
          name: try
        # TODO(kwk): Add port for prometheus logger
      livenessProbe:
        httpGet:
          path: /
          port: www
        initialDelaySeconds: 120
        periodSeconds: 10
  volumes:
    - name: master_secret_volume
      type: File
      secret:
        secretName: master-secret
    # TODO(kwk): Add volume for config dir
