infra/master/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: master-route-www
  labels:
    app: "buildbot"
    tier: "master"
spec:
  path: /
  to:
    kind: Service
    name: master-service-www
  port:
    targetPort: 8010
